update about puf edit

--- a/about.html
+++ b/about.html
@@ -169,8 +169,15 @@
 				<p id="bio" style="margin-top:35px;">
 
 
-					Jake Elwes (b.1993, UK) is an artist living in London currently working to queer artificial intelligence with drag performers. Having been making art exploring the aesthetics and ethics of machine learning systems since the very first generative AI models in 2016, their art searches for poetry and narrative in the successes and failures of digital systems. Across projects that encompass moving-image installation, sound and performance, Jake’s work finds unusual ways of demystifying, mapping and subverting technology. Works include deepfake drag in The Zizi Project, glitching oppressive algorithms in Machine Learning Porn and reframing AI generated marsh birds back into nature in CUSP. Jake’s work also calls for us to challenge who is building these systems and who (or what) they’re building them for, and whether we as artists and queers can reclaim these technologies to build our own digital utopias.
-
+					Jake Elwes (b.1993, UK) is an artist living in London currently working to queer artificial
+					intelligence with drag performers. Across projects that encompass moving-image installation, sound
+					and performance, Jake’s work finds unusual ways of demystifying, mapping and subverting technology.
+					Their work searches for poetry and narrative in the successes and failures of digital systems. Works
+					include deepfake drag in The Zizi Project, glitching oppressive algorithms in Machine Learning Porn
+					and reframing AI generated marsh birds back into nature in CUSP. They have been making art exploring
+					the aesthetics and ethics of machine learning systems since the very first generative AI models in
+					2016. Jake’s work also calls for us to challenge who builds these systems and for what purpose, and
+					whether we as artists and queers can reclaim these technologies to build our own digital utopias.
 
 
 					<!-- 2023.. Jake Elwes (b.1993) is an artist living and working in London. They studied at The Slade School
@@ -211,7 +218,8 @@
 					Museum, Madrid; Ars Electronica, Austria; Zabludowicz Collection, London; Sculpture in the City,
 					London; Science Gallery Dublin; RMIT Gallery, Melbourne; Onassis Foundation, Athens; E-WERK
 					Freiburg, Germany; Museum für Naturkunde, Berlin; Nature Morte, Delhi; Centre for the Future of
-					Intelligence, Cambridge and they have been featured on ZDF aspekte, ARD ttt (DE), BBC Radio 4 Front Row, and BBC1’s Kill Your TV - History of Video Art (UK).
+					Intelligence, Cambridge and they have been featured on ZDF aspekte, ARD ttt (DE), BBC Radio 4 Front
+					Row, and BBC1’s Kill Your TV - History of Video Art (UK).
 
 				</p>
 				<br>
@@ -311,7 +319,7 @@
 						<b>Slade School of Fine Art (UCL)</b>, BA (Hons) - Fine Art, London, 2013 - 2017<br>
 						<b>Central St Martins (UAL)</b>, Foundation, London, 2012 - 2013<br>
 						<b>School of Machines, Making &amp;
-						Make-Believe</b>, The Neural Aesthetic with Gene Kogan, Berlin, 2016 <br>
+							Make-Believe</b>, The Neural Aesthetic with Gene Kogan, Berlin, 2016 <br>
 						<b>School of the Art Institute Chicago</b>, International Exchange - Art &amp;
 						Technology, 2015 <br>
 						<br>
@@ -1477,16 +1485,19 @@
 					<p>
 						- being updated -
 
-						<p>
-
-							Agnieszka Roguski (2023), <b>Algorithmic Drag: Mimicry and Digital Staging of the Self in Jake Elwes' Zizi - Queering the Dataset</b>, in <i>Glitch. The Art of Interference.</i> ed. Franziska Kunze, Pinakothek Catalogue, DISTANZ Verlag, ISBN: 978-3-95476-600-0
-						</p>
 					<p>
-						Joe Parslow (2023), <a id=show target="_blank" href="https://www.tandfonline.com/doi/full/10.1080/10486801.2023.2173592"><b>
-							Kings, Queens, Monsters and Things: Digital Drag Performance and Queer Moves
-							in Artificial Intelligence (AI).
-						</b></a> Contemporary Theatre Review Print ISSN 1048-6801 Online ISSN
-						1477-2264. 
+
+						Agnieszka Roguski (2023), <b>Algorithmic Drag: Mimicry and Digital Staging of the Self in Jake
+							Elwes' Zizi - Queering the Dataset</b>, in <i>Glitch. The Art of Interference.</i> ed.
+						Franziska Kunze, Pinakothek Catalogue, DISTANZ Verlag, ISBN: 978-3-95476-600-0
+					</p>
+					<p>
+						Joe Parslow (2023), <a id=show target="_blank"
+							href="https://www.tandfonline.com/doi/full/10.1080/10486801.2023.2173592"><b>
+								Kings, Queens, Monsters and Things: Digital Drag Performance and Queer Moves
+								in Artificial Intelligence (AI).
+							</b></a> Contemporary Theatre Review Print ISSN 1048-6801 Online ISSN
+						1477-2264.
 						(view here</a>)
 					</p>
 					<p>
@@ -1496,34 +1507,38 @@
 					</p>
 					<p>
 						Drew Hemment, Morgan Currie, SJ Bennett, Jake Elwes, Anna Ridler, Caroline Sinders, Matjaz
-						Vidmar, Robin Hill, and Holly Warner (2023), <a id=show target="_blank" href="https://doi.org/10.1145/3593013.3594052"><b>AI in the Public Eye:
-							Investigating Public AI
-							Literacy Through AI Art.
-						</b></a> In Proceedings of the 2023 ACM Conference on Fairness, Accountability,
+						Vidmar, Robin Hill, and Holly Warner (2023), <a id=show target="_blank"
+							href="https://doi.org/10.1145/3593013.3594052"><b>AI in the Public Eye:
+								Investigating Public AI
+								Literacy Through AI Art.
+							</b></a> In Proceedings of the 2023 ACM Conference on Fairness, Accountability,
 						and Transparency (FAccT '23). Association for Computing Machinery, New York, NY, USA, 931–942.
 					</p>
 					<p>
 						Hemment, D., Zeilinger, M., Vidmar, M., Elwes, J., Warner, H., Pérez, D. S., & Hill, R. (2022).
-						<a id=show target="_blank" href="https://doi.org/doi.org/10.21606/drs.2022.808"><b>Towards a heuristic model for experiential AI: analysing the Zizi Show in the new real.</b></a>
+						<a id=show target="_blank" href="https://doi.org/doi.org/10.21606/drs.2022.808"><b>Towards a
+								heuristic model for experiential AI: analysing the Zizi Show in the new real.</b></a>
 						D.
 						Lockton, S. Lenzi, P. Hekkert, A. Oak, J. Sadaba, & P. Lloyd (Eds.), Proceedings of DRS2022
 						Bilbao: Design Research Society International Conference (DRS Biennial Conference Series).
 						Design Research Society. Advance online publication.
-					
+
 					</p>
 					<p>
-						Owen Perry (2021). <b>The Zizi Show review</b></a>, Volupté: Interdisciplinary Journal of Decadence
+						Owen Perry (2021). <b>The Zizi Show review</b></a>, Volupté: Interdisciplinary Journal of
+						Decadence
 						Studies.
 						Goldsmiths, London
 						(view )
 
-						
+
 					</p>
 					<p>
-						Anne Ploin, Eynon, R., Hjorth I. & Osborne, M.A. (2022). <a id=show target="_blank" href="https://www.oii.ox.ac.uk/news-events/reports/ai-the-arts/"><b>
-							AI and the Arts: How Machine Learning
-							is Changing Artistic Work.
-						</b></a>. Oxford Internet Institute, University of Oxford, UK
+						Anne Ploin, Eynon, R., Hjorth I. & Osborne, M.A. (2022). <a id=show target="_blank"
+							href="https://www.oii.ox.ac.uk/news-events/reports/ai-the-arts/"><b>
+								AI and the Arts: How Machine Learning
+								is Changing Artistic Work.
+							</b></a>. Oxford Internet Institute, University of Oxford, UK
 						(view here</a>)
 
 					</p>
