--- a/project-zizi-vam.html
+++ b/project-zizi-vam.html
@@ -94,7 +94,7 @@
 					<div class="desktop-6 tablet-12 columns">
 
 						<div class="box-info">
-							<h3 class="border-top"><i>The Zizi Show - A Deepfake Drag Cabaret</i> at the V&amp;A Museum</h3>
+							<h3 class="border-top"><i>The Zizi Show: A Deepfake Drag Cabaret,</i> Museum Version</h3>
 							<p class="project-desc">2023, multi-channel video, 29 minute loop
 							</p>
 							
