--- a/project-sontag.html
+++ b/project-sontag.html
@@ -11,7 +11,7 @@
 	<!-- Basic Page Needs
 	================================================== -->
 	<meta charset="utf-8">
-	<title>Jake Elwes - A.I. Interprets A.I. Interpreting ‘Against Interpretation’ (Sontag 1966)</title>
+	<title>Jake Elwes - A.I. Interpreting ‘Against Interpretation’ (Sontag 1966)</title>
 	<meta name="description" content=".">
 	<meta name="author" content="">
 
@@ -88,7 +88,7 @@
 					<div class="desktop-6 tablet-12 columns">
 
 						<div class="box-info">
-							<h3 class="border-top">A.I. Interprets A.I. Interpreting ‘Against Interpretation’ (Sontag 1966)
+							<h3 class="border-top">A.I. Interpreting ‘Against Interpretation’ (Sontag 1966)
 							</h3>
 							<p class="project-desc">2023, 3 channel video with sound, 25 minute loop
 							</p>
