--- a/index.html
+++ b/index.html
@@ -159,9 +159,9 @@
 					<div class="item">
 						<img src="images/project-Sontag.jpg" alt="Jake Elwes digital artist" />
 
-						<h3>A.I. Interprets A.I. Interpreting ‘Against Interpretation’ </h3>
+						<h3>A.I. Interpreting ‘Against Interpretation’ (Sontag 1966)</h3>
 
-						<span style="display:block" class="category"><b>(Sontag 1966)</b>, multi-channel video, 2023</span>
+						<span style="display:block" class="category">multi-channel video, 2023</span>
 					</div>
 				</div>
 			</a>
