--- a/index.html
+++ b/index.html
@@ -322,6 +322,17 @@
 
 			<div class="clear hide-under-tablet"></div>
 
+			<a href="project-musicalTaxonomy.html" class="permalink">
+				<div class="desktop-4 tablet-6 columns">
+					<div class="item">
+						<img src="images/project-musicalTaxonomy.jpg" alt="" />
+
+						<h3>taxonomy of sound</h3>
+						<span class="category">sculpture, 2015</span>
+					</div><!-- // .item -->
+				</div><!-- // .desktop-4 -->
+			</a>
+
 			<a href="project-digitalTouch.html" class="permalink">
 				<div class="desktop-4 tablet-6 columns">
 					<div class="item">
@@ -344,6 +355,9 @@
 				</div><!-- // .desktop-4 -->
 			</a>
 
+			<div class="clear hide-under-tablet"></div>
+
+		
 			<a href="project-iPhoneTouch.html" class="permalink">
 				<div class="desktop-4 tablet-6 columns">
 					<div class="item">
@@ -355,7 +369,6 @@
 				</div><!-- // .desktop-4 -->
 			</a>
 
-			<div class="clear hide-under-tablet"></div>
 
 			<a href="project-pornCircles.html" class="permalink">
 				<div class="desktop-4 tablet-6 columns">
