musical taxonomy update

--- a/project-MLPorn.html
+++ b/project-MLPorn.html
@@ -97,7 +97,7 @@
 								<!-- <br>A convolutional neural network<small><sub>1</sub></small> was trained using Yahoo’s explicit content model for identifying pornography<small><sub>2</sub></small>, which learnt by being fed a database of thousands of graphic images. The neural network was then re-engineered to generate pornography from scratch.
 <br>Machine Learning Porn is a 12 minute looped film that records the AI’s pornographic fantasies.  -->
 
-								Machine Learning Porn visualises an AI’s pornographic ruminations with a soundtrack comprising of a historically pioneering non binary A.I. generated voice and a track composed by UK producer Breaka.
+								Machine Learning Porn visualises an AI’s pornographic ruminations with a soundtrack comprising of a historically pioneering, non-binary, A.I. generated voice and a track composed by UK producer Breaka.
 								<br><br>
 								Yahoo trained a neural network* to flag and censor sexual imagery from the internet. It
 								learnt by being fed a dataset of thousands of graphic images, independently working out
