--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
 					<div class="item">
 						<img src="images/project-musicalTaxonomy.jpg" alt="" />
 
-						<h3>taxonomy of sound</h3>
+						<h3>Taxonomy of Sound</h3>
 						<span class="category">sculpture, 2015</span>
 					</div><!-- // .item -->
 				</div><!-- // .desktop-4 -->
