musical taxonomy update

--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
 
 			<div class="clear hide-under-tablet"></div>
 
-			<a href="project-musicalTaxonomy.html" class="permalink">
+			<a href="project-musicaltaxonomy.html" class="permalink">
 				<div class="desktop-4 tablet-6 columns">
 					<div class="item">
 						<img src="images/project-musicalTaxonomy.jpg" alt="" />
