--- a/project-musicaltaxonomy.html
+++ b/project-musicaltaxonomy.html
@@ -128,11 +128,11 @@
 
 				<img src="images/project-musicalTaxonomy/MusicalTaxonomy.jpg" alt="Jake Elwes Musical Taxonomy" />
 
-				<small><i>Two 3D prints from ‘Musical Taxonomy: 24 Piano Reflections’</i></small>
+				<small><i>Two 3D prints from ‘Musical Taxonomy I: 24 Piano Reflections’</i></small>
 
 				<img src="images/project-musicalTaxonomy/Zoology.jpg" alt="Jake Elwes Musical Taxonomy" />
 
-				<small><i>Three 3D prints from ‘Musical Taxonomy: Animal Call Remnants’</i></small>
+				<small><i>Three 3D prints from ‘Musical Taxonomy II: Animal Call Remnants’</i></small>
 					<br><br>
 
 				<iframe id="vid" src="https://player.vimeo.com/video/197343359?color=ffffff&title=0&byline=0&portrait=0"
