--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 								class="fa fa-fw fa-vimeo"></i></a></li>
 					<li><a target="_blank" href="https://www.youtube.com/user/jakeelwes"
 							class="btn-social btn-outline"><i class="fa fa-fw fa-youtube"></i></a></li>
-					<li><a href="mailto:contaxct@jakxeelwesx.coxm?Subject=Contact"
+					<li><a href="mailto:studiox.jake.elxwes.coxm?Subject=Contact"
 							onmouseover="this.href=this.href.replace(/x/g,'');" target="_top"
 							class="btn-social btn-outline"><i class="fa fa-fw fa-envelope-o"></i></a></li>
 					<!-- <li><a href="https://lab.jakeelwes.com" class="btn-social btn-outline">STUDIO</i></a></li> -->
