--- a/lab.html
+++ b/lab.html
@@ -99,7 +99,7 @@
 					<li><a href="https://www.instagram.com/jakeelwes/" class="btn-social btn-outline"><i class="fa fa-fw fa-instagram"></i></a></li>
 					<li><a href="https://vimeo.com/jakeelwes" class="btn-social btn-outline"><i class="fa fa-fw fa-vimeo"></i></a></li>
 					<li><a href="https://www.youtube.com/user/jakeelwes" class="btn-social btn-outline"><i class="fa fa-fw fa-youtube"></i></a></li>
-					<li><a href="mailto:contaxct@jakxeelwesx.coxm?Subject=Contact" onmouseover="this.href=this.href.replace(/x/g,'');" target="_top" class="btn-social btn-outline"><i class="fa fa-fw fa-envelope-o"></i></a></li>
+					<li><a href="mailto:studiox.jake.elxwes.coxm?Subject=Contact" onmouseover="this.href=this.href.replace(/x/g,'');" target="_top" class="btn-social btn-outline"><i class="fa fa-fw fa-envelope-o"></i></a></li>
 				</ul><!-- // #social -->
 
 			</div><!-- // .desktop-9 -->
