--- a/project-AutoEncodedBuddha.html
+++ b/project-AutoEncodedBuddha.html
@@ -119,7 +119,13 @@
 
 
 					<img src="images/project-AutoEncodedBuddha/1.JPG" width="100%" alt="Jake Elwes digital artist" />
+					<small>Auto-Encoded Buddha (2016)</small>
+
 					<div id="budd"></div>
+					<small>Early image generator model failing to create image of Buddha</small>
+
+					<img src="images/project-AutoEncodedBuddha/5231.webp" width="100%" alt="Jake Elwes digital artist" />
+					<small>Nam June Paik, TV Buddha (1974) at Tate Modern. Photograph: Guy Bell/Rex/Shutterstock</small>
 
 
 				  <script>
