--- a/project-zizi-vam.html
+++ b/project-zizi-vam.html
@@ -200,16 +200,24 @@
 					allowfullscreen></iframe>
 					<small>Large projection channel, lipsync movement performed by Cara Melle</small><br><br>
 
-					<iframe id="vid3" src="https://player.vimeo.com/video/879178192?color=ffffff&title=0&byline=0&portrait=0"
+
+					<iframe id="vid2" src="https://player.vimeo.com/video/879178192?color=ffffff&title=0&byline=0&portrait=0"
 					width="100%" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen
 					allowfullscreen></iframe>
 					<small>Render of 7 close-up channels, lipsync movement performed by Chiyo</small><br><br>
+
+
+					<iframe id="vid3" src="https://player.vimeo.com/video/916558977?color=ffffff&title=0&byline=0&portrait=0"
+					width="100%" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen
+					allowfullscreen></iframe>
+					<small>Documentation of the final day with members of the Zizi Cast</small><br><br>
+
 
 				<script>
 					function resizeDivs() {
 						$('#vid').css("height", $('#vid').width() / 1.7777);
 						$('#vid2').css("height", $('#vid2').width() / 1.7777);
-						$('#vid3').css("height", $('#vid3').width() / 1.7777);
+						$('#vid3').css("height", $('#vid3').width() / 1.333);
 
 					}
 					$(resizeDivs);
