--- a/project-zizi-vam.html
+++ b/project-zizi-vam.html
@@ -95,7 +95,7 @@
 
 						<div class="box-info">
 							<h3 class="border-top"><i>The Zizi Show: A Deepfake Drag Cabaret,</i> Museum Version</h3>
-							<p class="project-desc">2023, multi-channel video, 29 minute loop
+							<p class="project-desc">2020/23, multi-channel video, 29 minute loop
 							</p>
 							
 							<p><a id="show" target="_blank" href="/about-zizi/">Visit <i>The Zizi Show </i> - About Page</a></p>
