--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 
 						<h3>The Zizi Show - A Deepfake Drag Cabaret at the V&amp;A</h3>
 
-						<span style="display:block" class="category">multi-channel video, 2023</span>
+						<span style="display:block" class="category">multi-channel video, 2020/23</span>
 					</div>
 				</div>
 			</a>
