--- a/about.html
+++ b/about.html
@@ -117,7 +117,7 @@
 								class="fa fa-fw fa-vimeo"></i></a></li>
 					<li><a target="_blank" href="https://www.youtube.com/user/jakeelwes"
 							class="btn-social btn-outline"><i class="fa fa-fw fa-youtube"></i></a></li>
-					<li><a href="mailto:studiox.jake.elxwes.coxm?Subject=Contact"
+					<li><a href="mailto:studiox.jake.elxwes@gmail.coxm?Subject=Contact"
 							onmouseover="this.href=this.href.replace(/x/g,'');" target="_top"
 							class="btn-social btn-outline"><i class="fa fa-fw fa-envelope-o"></i></a></li>
 					<!-- <li><a href="https://lab.jakeelwes.com" class="btn-social btn-outline">STUDIO</i></a></li> -->
@@ -242,7 +242,7 @@
 					Sales Enquiries | <a id="show" href="mailto:info@gazelliarthouse.com?Subject=Contact" target="_top"
 						class="btn-social btn-outline">info@gazelliarthouse.com</a>
 					<br>
-					Other Enquiries | <a id="show" href="mailto:studiox.jake.elxwes.coxm?Subject=Contact"
+					Other Enquiries | <a id="show" href="mailto:studiox.jake.elxwes@gmail.coxm?Subject=Contact"
 						onmouseover="this.href=this.href.replace(/x/g,'');" target="_top"
 						class="btn-social btn-outline">Email Artist</a>
 				</p>
