--- a/footer.html
+++ b/footer.html
@@ -17,7 +17,7 @@
       <li><a target="_blank" href="https://www.twitter.com/jakeelwes/" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a></li>
       <li><a target="_blank" href="https://vimeo.com/jakeelwes" class="btn-social btn-outline"><i class="fa fa-fw fa-vimeo"></i></a></li>
       <li><a target="_blank" href="https://www.youtube.com/user/jakeelwes" class="btn-social btn-outline"><i class="fa fa-fw fa-youtube"></i></a></li>
-      <li><a target="_blank" href="mailto:studiox.jake.elxwes.coxm?Subject=Contact" onmouseover="this.href=this.href.replace(/x/g,'');" target="_top" class="btn-social btn-outline"><i class="fa fa-fw fa-envelope-o"></i></a></li>
+      <li><a target="_blank" href="mailto:studiox.jake.elxwes@gmail.coxm?Subject=Contact" onmouseover="this.href=this.href.replace(/x/g,'');" target="_top" class="btn-social btn-outline"><i class="fa fa-fw fa-envelope-o"></i></a></li>
     </ul><!-- // #social -->
 
   </div><!-- // .desktop-9 -->
