shows and zizi desc

--- a/about.html
+++ b/about.html
@@ -169,8 +169,10 @@
 				<p id="bio" style="margin-top:35px;">
 
 
-					Jake Elwes (b.1993, UK) is an artist, hacker, neuroqueer, educator and researcher living in London. They're currently working to queer artificial
-					intelligence with deepfake drag performers. Across projects that encompass moving-image installation, sound
+					Jake Elwes (b.1993, UK) is an artist, hacker, neuroqueer, educator and researcher living in London.
+					They're currently working to queer artificial
+					intelligence with deepfake drag performers. Across projects that encompass moving-image
+					installation, sound
 					and performance, Jake’s work finds unusual ways of demystifying, mapping and subverting technology.
 					Their work searches for poetry and narrative in the successes and failures of digital systems. Works
 					include deepfake drag in The Zizi Project, glitching oppressive algorithms in Machine Learning Porn
@@ -335,17 +337,10 @@
 
 
 					<div class="shows">
-					
+
 
 
 						<h4 id="currentshows">Current/Upcoming Exhibtions</h4>
-						<p>
-							<b>25th May 2023 - 20th April 2024</b> - <a id=show target="_blank"
-								href="https://www.vam.ac.uk/event/ojRbdO9D2a/the-zizi-show-by-jake-elwes-2023-24">The
-								Zizi Show at the V&amp;A,
-							</a>Digital Gallery (solo display), Photography Centre, <b>V&amp;A / Victoria and Albert
-								Museum</b>, South Kensington, London, UK
-						</p>
 
 						<p>
 							<b>9th Sept 2023 - 28th Jan 2024</b> - <a id=show target="_blank"
@@ -396,7 +391,8 @@
 								Elwes and Me the Drag Queen answer 10 questions about The Zizi Project (6 min),</a> 2021
 						</p>
 						<p>
-							<a id=show target="_blank" href="https://youtu.be/jggMX0G-MUI">▷ Is AI bad for Artists? Jake
+							<a id=show target="http://127.0.0.1:5501/images/project-haikuNews/1.jpg_blank"
+								href="https://youtu.be/jggMX0G-MUI">▷ Is AI bad for Artists? Jake
 								Elwes - VICE UK Q&A (8 min),</a> 2023
 						</p>
 						<p>
@@ -429,7 +425,7 @@
 						<img src="images/about-talks.jpg" class="aboutimg" alt="talks by jake elwes">
 						<img src="images/about-talks2.jpg" class="aboutimg" alt="talks by jake elwes">
 
-	
+
 						<br>
 						<br>
 
@@ -440,7 +436,7 @@
 							<a id=show target="_blank"
 								href="https://www.vam.ac.uk/event/ojRbdO9D2a/the-zizi-show-by-jake-elwes-2023-24">The
 								Zizi Show at the V&amp;A,
-							</a>Digital Gallery, Photography Centre, <b>V&amp;A / Victoria and Albert
+							</a>Digital Gallery (solo display), Photography Centre, <b>V&amp;A / Victoria and Albert
 								Museum</b>, London
 						</p>
 						<p>
@@ -501,6 +497,11 @@
 								Horror Show!
 								A Twisted Tale Of Modern Britain,
 							</a> <b>Somerset House (2022-2023)</b>, London, UK
+						</p>
+						<p>
+							<a id=show target="_blank"
+								href="https://www.thehindu.com/entertainment/art/vichitra-desh-queer-nation-exhibition-new-delhi/article67480466.ece#:~:text=Vichitra%20Desh%20brings%20together%20a,just%20a%20gaze%20of%20sexuality&text=When%20Adil%20Kalim%2C%2028%2C%20visits,along%20a%20sketchpad%20and%20inks.">The
+								Vichitrta Desh - Queer Nation</a>, <b>India Habitat Centre</b>, New Delhi, India
 						</p>
 						<p>
 							<a id=show target="_blank"
