--- a/about.html
+++ b/about.html
@@ -169,11 +169,12 @@
 				<p id="bio" style="margin-top:35px;">
 
 
-					Jake Elwes (b.1993, UK) is an artist, hacker, neuroqueer, educator and researcher living in London.
-					They're currently working to queer artificial
-					intelligence with deepfake drag performers. Across projects that encompass moving-image
-					installation, sound
-					and performance, Jake’s work finds unusual ways of demystifying, mapping and subverting technology.
+					Jake Elwes (b.1993, UK) is an artist, hacker, radical faerie, neuroqueer and researcher living in
+					London.
+					They're currently working to queer artificial intelligence with deepfake drag performers. Across
+					projects that encompass moving-image
+					installation, sound and performance, Jake’s work finds unusual ways of demystifying, mapping and
+					subverting technology.
 					Their work searches for poetry and narrative in the successes and failures of digital systems. Works
 					include deepfake drag in The Zizi Project, glitching oppressive algorithms in Machine Learning Porn
 					and reframing AI generated marsh birds back into nature in CUSP. They have been making art exploring
