--- a/about.html
+++ b/about.html
@@ -170,9 +170,7 @@
 
 
 					Jake Elwes (b.1993, UK) is an artist, hacker, radical faerie, neuroqueer and researcher living in
-					London.
-					They're currently working to queer artificial intelligence with deepfake drag performers. Across
-					projects that encompass moving-image
+					London. Across projects that encompass moving-image
 					installation, sound and performance, Jake’s work finds unusual ways of demystifying, mapping and
 					subverting technology.
 					Their work searches for poetry and narrative in the successes and failures of digital systems. Works
@@ -344,35 +342,16 @@
 						<h4 id="currentshows">Current/Upcoming Exhibtions</h4>
 
 						<p>
-							<b>9th Sept 2023 - 28th Jan 2024</b> - <a id=show target="_blank"
-								href="https://jam.jutfoundation.org.tw/en/exhibition/107/4372">Future Lives, Future You
-								– Digital, Machine and Cyborgs</a>, <b>JUT Art Museum</b>, Taipei, Taiwan
+							<b>5th May 2024 - 2nd Sept 2024</b> - <a id=show target="_blank"
+								href="https://www.eastquaywatchet.co.uk/articles/the-zizi-show">The Zizi Show</a>, <b>East Quay</b>, Watchet / Somerset, UK 
+						</p>
+
+						<p>
+							<b>26th April 2024 - 8th August 2024</b> - <a id=show target="_blank"
+								href="https://www.mmca.go.kr/eng/exhibitions/exhibitionsDetail.do?exhFlag=1">What an Artificial World</a>, <b>The National Museum of Modern and Contemporary Art (MMCA)</b>, Cheongju, South Korea 
 						</p>
 
 
-						<p>
-							<b>27th Aug 2023 - 28th Jan 2024</b> - <a id=show target="_blank"
-								href="https://maxernstmuseum.lvr.de/en/ausstellungen/vorschau_1/Preview.html">Surreal
-								Futures,
-							</a><b> Max Ernst Museum</b>, Brühl, Germany
-						</p>
-						<p>
-							<b>1st Dec 2023 - 17th Mar 2024</b> - <a id=show target="_blank"
-								href="https://www.pinakothek-der-moderne.de/en/exhibitions/glitch/">Glitch. Die Kunst
-								Der
-								Störung,
-							</a><b> Pinakothek der Moderne</b>, Munich, Germany
-						</p>
-						<p>
-							<b>12th Jan 2024 - 15th Jan 2024</b> - <a id=show target="_blank"
-								href="https://artsg.com/">Art SG,
-							</a> Singapore
-						</p>
-						<p>
-							<b>1st Mar 2024 - 24th Mar 2024</b> - <a id=show target="_blank"
-								href="https://photo.org.au/">PHOTO International Festival of Photography,
-							</a> <b>Melbourne and beyond</b>, Australia
-						</p>
 
 						<br>
 						<br>
@@ -436,6 +415,40 @@
 
 						<h4 id="groupshows">Selected Group Exhibitions and Projects</h4>
 
+						<p>
+							<b>2024</b>
+						</p>
+						<p>
+							<a id=show target="_blank"
+								href="https://jam.jutfoundation.org.tw/en/exhibition/107/4372">Future Lives, Future You
+								– Digital, Machine and Cyborgs</a>, <b>JUT Art Museum (2023-2024)</b>, Taipei, Taiwan
+						</p>
+
+
+						<p>
+							<a id=show target="_blank"
+								href="https://maxernstmuseum.lvr.de/en/ausstellungen/vorschau_1/Preview.html">Surreal
+								Futures,
+							</a><b> Max Ernst Museum (2023-2024)</b>, Brühl, Germany
+						</p>
+						<p>
+							<a id=show target="_blank"
+								href="https://www.pinakothek-der-moderne.de/en/exhibitions/glitch/">Glitch. Die Kunst
+								Der
+								Störung,
+							</a><b> Pinakothek der Moderne (2023-2024)</b>, Munich, Germany
+						</p>
+						<p>
+							<a id=show target="_blank"
+								href="https://artsg.com/">Art SG,
+						</a><b>Gazelli Art House</b>, Singapore
+						</p>
+						<p>
+							<a id=show target="_blank"
+								href="https://photo.org.au/">PHOTO International Festival of Photography,
+							</a> <b>Melbourne and beyond</b>, Australia
+						</p>
+						<br>
 						<p>
 							<b>2023</b>
 						</p>
