--- a/about.html
+++ b/about.html
@@ -169,7 +169,7 @@
 				<p id="bio" style="margin-top:35px;">
 
 
-					Jake Elwes (b.1993, UK) is an artist, hacker, radical faerie, neuroqueer and researcher living in
+					Jake Elwes (b.1993, UK) is an artist, hacker, radical faerie and researcher living in
 					London. Across projects that encompass moving-image
 					installation, sound and performance, Jake’s work finds unusual ways of demystifying, mapping and
 					subverting technology.
