--- a/project-zizi-vam.html
+++ b/project-zizi-vam.html
@@ -111,7 +111,7 @@
 							<br>
 
 
-							<p><i><b>V&amp;A Wall Text:</b></p>
+							<p><b>V&amp;A Wall Text:</b></p>
 							<p>The Zizi Show is a deepfake drag cabaret that explores the ethical problems which exist
 								in Artificial Intelligence (AI). Al refers to the ability of a computer system to
 								interpret and learn from given data. Although viewed by some as flawlessly neutral, Al
@@ -227,7 +227,7 @@
 										Transition movement by Wet Mess<br>
 									</p>
 									<br>
-																<p><i><b>Alternative East Quay Wall Text:</b></p>
+																<p><b>Alternative East Quay Wall Text:</b></p>
 
 																<p>
 The Zizi Show is a deepfake drag cabaret exploring the intersection of Artificial Intelligence (A.I.) and drag performance. This work investigates what A.l. can teach us about drag and what drag can teach us about A.I. The Zizi Show is a drag show with a twist — all the acts featured have been synthesised using deepfake technology.
