--- a/project-zizi-vam.html
+++ b/project-zizi-vam.html
@@ -102,10 +102,10 @@
 
 							<p><a id="show" target="_blank" href="/about-zizi/">Visit <i>The Zizi Show </i> - About
 									Page</a></p>
-							<p><a id="show" target="_blank"
+<!-- 							<p><a id="show" target="_blank"
 									href="https://www.vam.ac.uk/event/ojRbdO9D2a/the-zizi-show-by-jake-elwes-2023-24">On
 									the V&amp;A Website</a></p>
-
+ -->
 
 
 							<br>
