--- a/project-musicaltaxonomy.html
+++ b/project-musicaltaxonomy.html
@@ -107,6 +107,12 @@
 								The harpsichords and organs of Bach’s time would have all sounded horrendously out of tune to our contemporary ears if not played in the key (or root note) it was tuned to. My sculptures encapsulate recordings of much looser and more personal improvised musical reflections. Meditations to be uttered once and then lost, only to be recorded in physical forms.
 								<br> <br>
 								The second series examines the harmonics within different animal calls, spinning those into bone-like 3D sculptures placed next to the bones of the animal showing two very different remnants / artefacts / traces. Here both the animal’s calcium bodies and ephemeral sounds are given equal weight, both memorialised in physical form.
+								<br> <br>
+								<hr>
+								Created using a modified version of <a id="show" target="_blank"
+									href="https://github.com/laserpilot/SonicSculpture?tab=readme-ov-file">laserpilot's SonicSculpture openFrameworks code</a>.
+								
+
 
 						</div><!-- // .box-info -->
 
