update zizi access email

--- a/project-zizimotion.html
+++ b/project-zizimotion.html
@@ -102,7 +102,7 @@
 								performers. How can we as a queer community subvert deepfake technology, using it in an
 								ethical and consensual way to celebrate queer bodies? Everyone involved in the project
 								has power over their own data and involvement as well as all being part of the same
-								community. In this piece forms are re-animated by drag legend Wet Mess who’s improvised
+								community. In this piece forms are re-animated by drag legend Wet Mess whose improvised
 								movement causes the AI to beautifully break down and fail, imagining an alternate queer
 								utopia for AI.
 
