update zizi access email

--- a/project-zizi-show.html
+++ b/project-zizi-show.html
@@ -97,7 +97,7 @@
 							<h3 class="border-top">The Zizi Show</h3>
 							<p class="project-desc">2020, interactive performance
 							</p>
-							<p><a id="show" target="_blank" href="https://zizi.ai/">Visit ZIZI.AI</a><br>(public access currently closed but please <a href="mailto:zizidragshow@gmail.com">email zizidragshow@gmail.com</a> for access)</p>
+							<p><a id="show" target="_blank" href="https://zizi.ai/">Visit ZIZI.AI</a><br>(public access currently closed, <a id="show" href="mailto:zizidragshow@gmail.com">email zizidragshow@gmail.com</a> for access)</p>
 							<p>Drag Queens, Drag Kings, Drag Things and Artificial Intelligence… <br>
 								The Zizi Show (2020) is a deepfake drag cabaret, a virtual online stage hosting a
 								groundbreaking new show with a twist. It features acts that have been constructed using
