--- a/about.html
+++ b/about.html
@@ -341,22 +341,27 @@
 
 						<h4 id="currentshows">Current/Upcoming Exhibtions</h4>
 
-						<p>
-							<b>5th May 2024 - 2nd Sept 2024</b> - <a id=show target="_blank"
-								href="https://www.eastquaywatchet.co.uk/articles/the-zizi-show">The Zizi Show</a>, <b>East Quay</b>, Watchet / Somerset, UK 
-						</p>
-
-						<p>
-							<b>26th April 2024 - 8th August 2024</b> - <a id=show target="_blank"
-								href="https://www.mmca.go.kr/eng/exhibitions/exhibitionsDetail.do?exhFlag=1">What an Artificial World</a>, <b>The National Museum of Modern and Contemporary Art (MMCA)</b>, Cheongju, South Korea 
-						</p>
-
+						<p></p>
+							<b>8th Feb 2025 - 4th May 2025</b> - <a id=show target="_blank"
+								href="https://www.hasselbladfoundation.org/en/portfolio_page/bugs-metamorphosis/">Bugs & Metamorphosis: Glitching Photography</a>, <b>Hasselblad Center, Gothenburg Museum of Art</b>, Sweden 
+						</p>						
+						<p></p>
+							<b>13th Jun 2025 - 7th Sept 2025</b> - <a id=show target="_blank"
+								href="https://kunsthalaarhus.dk/en/Exhibitions/Kunsten-At-Fejle-The-Art-Of-Failing-1-Bugs-And-Metamorphosis">Kunsten at fejle / The Art of Failing 1: Bugs and Metamorphosis</a>, <b>Kunsthala Arhus</b>, Denmark 
+						</p>	
+						<p></p>
 
 						<br>
 						<br>
 
 						<h4 id="soloshows">Selected Solo Exhibitions and Installations</h4>
+						
+						<p><b>2024</b></p>
 
+						<p>
+							<a id=show target="_blank"
+								href="https://www.eastquaywatchet.co.uk/articles/the-zizi-show">The Zizi Show</a>, <b>East Quay</b>, Watchet / Somerset, UK 
+						</p>
 						<p>
 							<b>2023</b>
 							</p>
@@ -430,8 +435,11 @@
 								href="https://jam.jutfoundation.org.tw/en/exhibition/107/4372">Future Lives, Future You
 								– Digital, Machine and Cyborgs</a>, <b>JUT Art Museum (2023-2024)</b>, Taipei, Taiwan
 						</p>
-
-
+						<p>
+							<a id=show target="_blank"
+							href="https://www.mmca.go.kr/eng/exhibitions/exhibitionsDetail.do?exhFlag=1">What an Artificial World</a>, <b>The National Museum of Modern and Contemporary Art (MMCA)</b>, Cheongju, South Korea 
+						</p>
+					
 						<p>
 							<a id=show target="_blank"
 								href="https://maxernstmuseum.lvr.de/en/ausstellungen/vorschau_1/Preview.html">Surreal
