--- a/project-sontag.html
+++ b/project-sontag.html
@@ -118,14 +118,21 @@
 
 				<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
+				<iframe id="vid2" src="https://player.vimeo.com/video/1046599105?color=ffffff&title=0&byline=0&portrait=0"
+				width="100%" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen
+				allowfullscreen></iframe>
+				
+				<br><br>
+
 				<iframe id="vid" src="https://player.vimeo.com/video/831931323?color=ffffff&title=0&byline=0&portrait=0"
 					width="100%" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen
 					allowfullscreen></iframe>
-					<small>Installed at Gazelli Art House, London 2023</small><br><br>
+					<small>3 channel version installed at Gazelli Art House, London 2023</small><br><br>
 
 				<script>
 					function resizeDivs() {
 						$('#vid').css("height", $('#vid').width() / 1.7777);
+						$('#vid2').css("height", $('#vid').width() / 1.7777);
 
 					}
 					$(resizeDivs);
