--- a/project-termsandconditionsopera.html
+++ b/project-termsandconditionsopera.html
@@ -11,7 +11,7 @@
 	<!-- Basic Page Needs
 	================================================== -->
 	<meta charset="utf-8">
-	<title>Jake Elwes - Zizi & Me - The Deepfake Drag Double-act</title>
+	<title>Jake Elwes - Terms and Conditions Opera: A Legalese Libretto</title>
 	<meta name="description" content=".">
 	<meta name="author" content="Jake Elwes">
 
@@ -93,38 +93,19 @@
 					<div class="desktop-6 tablet-12 columns">
 
 						<div class="box-info">
-							<h3 class="border-top">Zizi & Me - The Deepfake Drag Double-act</h3>
-							<p class="project-desc">2020 - 2023, multimedia | theatre, performance & video
-							</p><p>Ongoing collaboration with <i><a id="show" target="_blank"
-								href="https://www.instagram.com/methedragqueen/">Me the Drag Queen</a></i></p>
+							<h3 class="border-top">Terms &amp; Conditions Opera: a Legalese Libretto</h3>
+							<p class="project-desc">2024, video &amp; music, aprox 4 hours (in progress)
+							</p>
 
 							<p>
-								‘Zizi & Me’ is a double act between drag queen <i>Me The Drag Queen</i>, and a deepfake (A.I.)
-								clone of <i>Me The Drag Queen</i>. By training a neural network<small>*</small> on filmed footage
-								this network learnt to construct a virtual body that can be controlled by feeding it new
-								reference movements. The first act 'Anything You Can Do (I Can Do Better)’ satirizes the idea that an AI is something that we might mistake for a human. Through drag performance, we aim to use cabaret and
-								musical theatre to challenge narratives surrounding A.I. and society. 
-
+								A music AI being fed on its own legalese. In a self-referential loop, OpenAI and Suno's Terms and Conditions are reinterpreted through Suno's own AI music generation software.
+							</p><p>
+								The true content of corporate AI systems lies not in their generated output (which are merely mimetic, superficial forms and derivative simulacra), but in their legal frameworks: the policies, copyrights, intellectual property, and terms of usage that demand real human labor and political engagement.
+							</p><p>	
+								Prompting corporate AI models can feel very limited and troubling - almost as if you’re giving part of your soul to help improve their models. Not wanting to give their model anything of myself, I instead fed it on itself, having it absurdly interpret its own governing laws.
+							</p><p>
+								AI is forcing us to radically reinvent intellectual and creative property laws (both OpenAI and Suno are currently being sued for copyright infringements). The revisions being shoehorned into this newly evolving landscape are buried in boring documents none of us read, but when set to mimetic music their jargon becomes more accessible. Decadently feeding an AI on itself resulting in a surreal opera: an unproductive and 'de'-generative AI.
 							</p>
-							<p><small><small>
-										*Video-to-Video Synthesis (2018)</p></small></small>
-
-							<p class="border-top">
-								<i>The Zizi Project (2019 - ongoing) is a collection of works by Jake Elwes exploring
-									the intersection of Artificial Intelligence (A.I.) and drag performance. Drag
-									challenges gender and explores otherness, while A.I. is often mystified as a concept
-									and tool, and is complicit in reproducing social bias. Zizi combines these themes
-									through a deepfake, synthesised drag identity created using machine learning. The
-									project explores what AI can teach us about drag, and what drag can teach us about
-									A.I.</i>
-							</p>
-
-							<small>
-								<p>
-									With <a id="show" target="_blank" href="https://efi.ed.ac.uk/">Edinburgh Futures
-										Institute</a> at University of Edinburgh.
-
-							</small></p>
 
 						</div><!-- // .box-info -->
 
@@ -144,11 +125,9 @@
 				<!-- <div class="desktop-6 tablet-12 columns" style="text-transform: uppercase;"> -->
 				<script>
 					function resizeDivs() {
-						$('#vid').css("height", $('#vid').width() / 1.7777);
-						$('#vid2').css("height", $('#vid').width() / 1.7777);
+						$('#vid').css("height", $('#vid').width() / 0.56);
+						$('#vid2').css("height", $('#vid').width() / 0.56);
 						$('#vid1').css("height", $('#vid').width() / 1.5);
-						$('#vid3').css("height", $('#vid').width() / 1.5);
-
 					}
 					$(resizeDivs);
 					$(window).resize(resizeDivs);
@@ -157,49 +136,9 @@
 				<iframe id="vid" width="100%" height="360" src="https://www.youtube.com/embed/vtpVr5KVvnk"
 					frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
 					webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-				<small>Zizi & Me - Anything You Can Do (I Can Do Better), Digital Video, 2020<br>
-					<small>Created by Jake Elwes and Me the Drag Queen,
-						Performance: <a id="show" target="_blank"
-							href="https://www.instagram.com/methedragqueen/">Me</a>,
-						Cinematographer: <a id="show" target="_blank" href="https://www.tobyelwes.com/">Toby Elwes</a>
-					</small></small>
-
-				<br><br><br>
-
-
-
-				<iframe id="vid2" width="100%" height="360" src="https://www.youtube.com/embed/NwIhejF4_zE"
-				frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-				webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-			<small>Zizi & Me - The world’s first chance to see AI and real-life drag queens on stage together<br>
-				<small>Mady by Chenxuan Wang
+					<small><small>Zizi & Me - Anything You Can Do (I Can Do Better), Digital Video, 2020
 				</small></small>
 
-				<br><br>
-
-				<img src="images/project-zizi-and-me/zizi-and-me1.jpg" alt="Zizi & Me - Jake Elwes digital artist" />
-				<br><small>A Night of A.I and Drag (2022), Zabludowicz Collection - Photos: Vicki Couchman
-				</small>
-				<br>
-				<img src="images/project-zizi-and-me/zizi-and-me2.jpeg" alt="Zizi & Me - Jake Elwes digital artist" />
-				<br>
-				<img src="images/project-zizi-and-me/zizi-and-me3.jpg" alt="Zizi & Me - Jake Elwes digital artist" />
-				<br>
-				<img src="images/project-zizi-and-me/zizi-and-me4.jpg" alt="Zizi & Me - Jake Elwes digital artist" />
-				<br>
-				<br>
-	
-				
-				<iframe class="half"  style="padding-right: 5%;" height="360" src="https://www.youtube.com/embed/I8pEAxmDsac"
-				frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-				webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-
-				<iframe class="half" height="360" src="https://www.youtube.com/embed/G0dUoGUOTAw"
-				frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-				webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-				<br><small>Zizi & Me - Live at Gazelli Art House, 29th July 2021<br>
-				<small>Get Happy/Happy Days Are Here Again (extract) - Judy Garland and Barbra Streisand<br>
-				Me and My Shadow (extract) - Frank Sinatra and Sammy Davis Jr </small></small>
 				<br><br><br>
 
 				
