--- a/index.html
+++ b/index.html
@@ -140,7 +140,19 @@
 
 	<section id="works" class="">
 		<div class="container">
-			
+
+			<!-- <a href="project-termsandconditionsopera.html" class="permalink">				
+				<div class="desktop-4 tablet-6 columns">
+					<div class="item">
+						<img src="images/project-termsandconditionsopera.jpg" alt="Jake Elwes digital artist" />
+
+						<h3>Terms &amp; Conditions Opera – A Legalese Libretto</h3>
+
+						<span style="display:block" class="category">video &amp; music, 2024</span>
+					</div>
+				</div>
+			</a> -->
+
 			<a href="https://artinthecageofdigitalreproduction.org/" target="_blank" class="permalink">
 				<div class="desktop-4 tablet-6 columns">
 					<div class="item">
@@ -170,9 +182,9 @@
 					<div class="item">
 						<img src="images/project-Sontag.jpg" alt="Jake Elwes digital artist" />
 
-						<h3>A.I Interprets A.I. Interpreting ‘Against Interpretation’ (Sontag 1966)</h3>
+						<h3>A.I Interprets A.I. Interpreting ‘Against Interpretation’</h3>
 
-						<span style="display:block" class="category">multi-channel video, 2023</span>
+						<span style="display:block" class="category"><b>(Sontag 1966)</b>, multi-channel video, 2023</span>
 					</div>
 				</div>
 			</a>
@@ -194,7 +206,7 @@
 					<div class="item">
 						<img src="images/project-ZiziMotion.jpg" alt="Jake Elwes digital artist" />
 
-						<h3>Zizi in Motion: A Deepfake Drag Utopia</h3>
+						<h3>Zizi in Motion - A Deepfake Drag Utopia</h3>
 
 						<span style="display:block" class="category"><b>(Movement by Wet Mess)</b>, video series, 2023</span>
 					</div>
@@ -208,7 +220,7 @@
 
 						<h3>The Zizi Show - Interactive Version</h3>
 
-						<span style="display:block" class="category">video &amp; interactive performance, 2020</span>
+						<span style="display:block" class="category">video &amp; interactive application, 2020</span>
 					</div>
 				</div>
 			</a>
@@ -218,8 +230,8 @@
 					<div class="item">
 						<img src="images/project-zizi-and-me.jpg" alt="Jake Elwes digital artist" />
 
-						<h3>Zizi & Me</h3>
-						<span class="category">performance collaboration, 2020 - 2023 (ongoing)</span>
+						<h3>Zizi & Me - The Deepfake Drag Double-act</h3>
+						<span class="category">video &amp; performance collaboration, 2020 - 2023 (ongoing)</span>
 					</div>
 				</div>
 			</a>
